Correct Serial Timing - Calculated without padding

--- a/Notes/6.1-Serial-Timings.md
+++ b/Notes/6.1-Serial-Timings.md
@@ -1,391 +1,3 @@
-# 1200 images
-```
-$ ./cnn-cifar10-serial-1200 
-Serial Code
-CNN for 1200 images
-Loading input batch 1...
-Load Data time:0.028548 seconds
-Create Network time:0.000056 seconds
-Load Network Parameters time:0.008706 seconds
-Create Ouputs time:0.000042 seconds
-
-Net Forward total time:22.858747 seconds
-    Time for conv1: 7.063947 seconds
-    Time for relu1: 0.110495 seconds
-    Time for pool1: 0.154206 seconds
-    Time for conv2: 11.741037 seconds
-    Time for relu2: 0.031641 seconds
-    Time for pool2: 0.046689 seconds
-    Time for conv3: 3.655198 seconds
-    Time for relu3: 0.010156 seconds
-    Time for pool3: 0.013539 seconds
-    Time for fc: 0.015535 seconds
-    Time for softmax: 0.001727 seconds
-
-  Conv: 22.460182 seconds
-  ReLU: 0.152292 seconds
-  Pool: 0.214434 seconds
-  FC:   0.015535 seconds
-  Softmax: 0.001727 seconds
-
-Net Accuracy: 78.25 % 
-Net Accuracy time:0.000081 seconds
-Free memory time:0.001162 seconds
-Total time:22.897342 seconds
-END!
-```
-
-# 13400 images
-
-```
-$ ./cnn-cifar10-serial-13400 
-Serial Code
-CNN for 13400 images
-Loading input batch 1...
-Loading input batch 2...
-Load Data time:0.258997 seconds
-Create Network time:0.000078 seconds
-Load Network Parameters time:0.008263 seconds
-Create Ouputs time:0.000169 seconds
-
-Net Forward total time:256.448374 seconds
-    Time for conv1: 79.619974 seconds
-    Time for relu1: 1.228118 seconds
-    Time for pool1: 1.718704 seconds
-    Time for conv2: 131.353624 seconds
-    Time for relu2: 0.357507 seconds
-    Time for pool2: 0.527951 seconds
-    Time for conv3: 41.034085 seconds
-    Time for relu3: 0.104893 seconds
-    Time for pool3: 0.152735 seconds
-    Time for fc: 0.163442 seconds
-    Time for softmax: 0.020786 seconds
-
-  Conv: 252.007683 seconds
-  ReLU: 1.690518 seconds
-  Pool: 2.399390 seconds
-  FC:   0.163442 seconds
-  Softmax: 0.020786 seconds
-
-Net Accuracy: 78.71 % 
-Net Accuracy time:0.001069 seconds
-Free memory time:0.014802 seconds
-Total time:256.731752 seconds
-END!
-```
-# 25600 images
-```
-$ ./cnn-cifar10-serial-25600 
-Serial Code
-CNN for 25600 images
-Loading input batch 1...
-Loading input batch 2...
-Loading input batch 3...
-Load Data time:0.494734 seconds
-Create Network time:0.000064 seconds
-Load Network Parameters time:0.008519 seconds
-Create Ouputs time:0.000238 seconds
-
-Net Forward total time:489.805027 seconds
-    Time for conv1: 151.500849 seconds
-    Time for relu1: 2.363624 seconds
-    Time for pool1: 3.295579 seconds
-    Time for conv2: 251.327098 seconds
-    Time for relu2: 0.688210 seconds
-    Time for pool2: 1.007990 seconds
-    Time for conv3: 78.421399 seconds
-    Time for relu3: 0.201346 seconds
-    Time for pool3: 0.322610 seconds
-    Time for fc: 0.315334 seconds
-    Time for softmax: 0.039163 seconds
-
-  Conv: 481.249346 seconds
-  ReLU: 3.253180 seconds
-  Pool: 4.626179 seconds
-  FC:   0.315334 seconds
-  Softmax: 0.039163 seconds
-
-Net Accuracy: 78.67 % 
-Net Accuracy time:0.001754 seconds
-Free memory time:0.023590 seconds
-Total time:490.333926 seconds
-END!
-```
-
-# 37800 images
-```
-$ ./cnn-cifar10-serial-37800 
-Serial Code
-CNN for 37800 images
-Loading input batch 1...
-Loading input batch 2...
-Loading input batch 3...
-Loading input batch 4...
-Load Data time:0.739809 seconds
-Create Network time:0.000080 seconds
-Load Network Parameters time:0.008360 seconds
-Create Ouputs time:0.000350 seconds
-
-Net Forward total time:719.891096 seconds
-    Time for conv1: 223.178713 seconds
-    Time for relu1: 3.472323 seconds
-    Time for pool1: 4.818113 seconds
-    Time for conv2: 368.882965 seconds
-    Time for relu2: 1.013106 seconds
-    Time for pool2: 1.478181 seconds
-    Time for conv3: 115.324228 seconds
-    Time for relu3: 0.294943 seconds
-    Time for pool3: 0.427626 seconds
-    Time for fc: 0.461734 seconds
-    Time for softmax: 0.058897 seconds
-
-  Conv: 707.385906 seconds
-  ReLU: 4.780372 seconds
-  Pool: 6.723920 seconds
-  FC:   0.461734 seconds
-  Softmax: 0.058897 seconds
-
-Net Accuracy: 78.76 % 
-Net Accuracy time:0.002795 seconds
-Free memory time:0.061215 seconds
-Total time:720.703705 seconds
-END!
-```
-
-# 50.000 images
-```
-$ ./cnn-cifar10-serial 
-Serial Code
-CNN for 50000 images
-Loading input batch 1...
-Loading input batch 2...
-Loading input batch 3...
-Loading input batch 4...
-Loading input batch 5...
-Load Data time:0.969591 seconds
-Create Network time:0.000081 seconds
-Load Network Parameters time:0.011809 seconds
-Create Ouputs time:0.000421 seconds
-
-Net Forward total time:940.766305 seconds
-    Time for conv1: 291.298343 seconds
-    Time for relu1: 4.524304 seconds
-    Time for pool1: 6.311454 seconds
-    Time for conv2: 482.608560 seconds
-    Time for relu2: 1.317451 seconds
-    Time for pool2: 1.931257 seconds
-    Time for conv3: 150.538303 seconds
-    Time for relu3: 0.384211 seconds
-    Time for pool3: 0.558648 seconds
-    Time for fc: 0.603027 seconds
-    Time for softmax: 0.074883 seconds
-
-  Conv: 924.445206 seconds
-  ReLU: 6.225966 seconds
-  Pool: 8.801359 seconds
-  FC:   0.603027 seconds
-  Softmax: 0.074883 seconds
-
-Net Accuracy: 78.84 % 
-Net Accuracy time:0.003454 seconds
-Free memory time:0.060104 seconds
-Total time:941.811765 seconds
-END!
-```
-# Profiling
-
-```
-$ make profile 
-nvc -Minfo=all -c11 -Wall -Wextra -march=native -pg -c main_serial.c -o main_serial.o
-nvc -Minfo=all -c11 -Wall -Wextra -march=native -pg -c layers_serial.c -o layers_serial.o
-conv_forward:
-     80, FMA (fused multiply-add) instruction(s) generated
-fc_forward:
-    218, FMA (fused multiply-add) instruction(s) generated
-nvc -Minfo=all -c11 -Wall -Wextra -march=native -pg -c malloc2D.c -o malloc2D.o
-nvc -Minfo=all -c11 -Wall -Wextra -march=native -pg -o cnn-cifar10-serial-profile main_serial.o layers_serial.o malloc2D.o
-
-$ ./cnn-cifar10-serial-profile 
-Serial Code
-CNN for 50000 images
-Loading input batch 1...
-Loading input batch 2...
-Loading input batch 3...
-Loading input batch 4...
-Loading input batch 5...
-Load Data time:0.995394 seconds
-Create Network time:0.000000 seconds
-Load Network Parameters time:0.007999 seconds
-Create Ouputs time:0.000000 seconds
-
-Net Forward total time:932.431064 seconds
-    Time for conv1: 289.344358 seconds
-    Time for relu1: 4.248795 seconds
-    Time for pool1: 6.039290 seconds
-    Time for conv2: 478.206216 seconds
-    Time for relu2: 1.273502 seconds
-    Time for pool2: 1.911492 seconds
-    Time for conv3: 149.138938 seconds
-    Time for relu3: 0.467912 seconds
-    Time for pool3: 0.503662 seconds
-    Time for fc: 0.631148 seconds
-    Time for softmax: 0.063995 seconds
-
-  Conv: 916.689512 seconds
-  ReLU: 5.990209 seconds
-  Pool: 8.454444 seconds
-  FC:   0.631148 seconds
-  Softmax: 0.063995 seconds
-
-Net Accuracy: 78.84 % 
-Net Accuracy time:0.002089 seconds
-Free memory time:0.056084 seconds
-Total time:933.492630 seconds
-END!
-
-```
-
-## Gprof
-```
-$ gprof ./cnn-cifar10-serial-profile -b
-Flat profile:
-
-Each sample counts as 0.01 seconds.
-  %   cumulative   self              self     total           
- time   seconds   seconds    calls  ms/call  ms/call  name    
- 98.23    915.87   915.87   150000     6.11     6.12  conv_forward
-  0.85    923.77     7.90   150000     0.05     0.05  pool_forward
-  0.62    929.58     5.81   150000     0.04     0.04  relu_forward
-  0.25    931.93     2.35   150000     0.02     0.02  pad_input
-  0.10    932.87     0.94        1   941.13   941.13  load_data
-  0.06    933.46     0.59    50000     0.01     0.01  fc_forward
-  0.00    933.48     0.02    50000     0.00     0.00  softmax_forward
-  0.00    933.50     0.02                             main
-  0.00    933.51     0.01        1    10.01    10.01  arr2txt_2
-  0.00    933.51     0.00        3     0.00     0.00  free_conv
-  0.00    933.51     0.00        3     0.00     0.00  free_pool
-  0.00    933.51     0.00        3     0.00     0.00  free_relu
-  0.00    933.51     0.00        3     0.00     0.00  load_conv
-  0.00    933.51     0.00        3     0.00     0.00  make_conv_layer
-  0.00    933.51     0.00        3     0.00     0.00  make_pool_layer
-  0.00    933.51     0.00        3     0.00     0.00  make_relu_layer
-  0.00    933.51     0.00        2     0.00     0.00  malloc2D
-  0.00    933.51     0.00        1     0.00     0.00  free_fc
-  0.00    933.51     0.00        1     0.00     0.00  free_softmax
-  0.00    933.51     0.00        1     0.00     0.00  load_fc
-  0.00    933.51     0.00        1     0.00     0.00  make_fc_layer
-  0.00    933.51     0.00        1     0.00     0.00  make_softmax_layer
-
-
-                        Call graph
-
-
-granularity: each sample hit covers 2 byte(s) for 0.00% of 933.51 seconds
-
-index % time    self  children    called     name
-                                                 <spontaneous>
-[1]    100.0    0.02  933.49                 main [1]
-              915.87    2.35  150000/150000      conv_forward [2]
-                7.90    0.00  150000/150000      pool_forward [3]
-                5.81    0.00  150000/150000      relu_forward [4]
-                0.94    0.00       1/1           load_data [6]
-                0.59    0.00   50000/50000       fc_forward [7]
-                0.02    0.00   50000/50000       softmax_forward [8]
-                0.01    0.00       1/1           arr2txt_2 [9]
-                0.00    0.00       3/3           make_conv_layer [14]
-                0.00    0.00       3/3           make_relu_layer [16]
-                0.00    0.00       3/3           make_pool_layer [15]
-                0.00    0.00       3/3           load_conv [13]
-                0.00    0.00       3/3           free_relu [12]
-                0.00    0.00       3/3           free_pool [11]
-                0.00    0.00       3/3           free_conv [10]
-                0.00    0.00       2/2           malloc2D [17]
-                0.00    0.00       1/1           make_fc_layer [21]
-                0.00    0.00       1/1           make_softmax_layer [22]
-                0.00    0.00       1/1           load_fc [20]
-                0.00    0.00       1/1           free_softmax [19]
-                0.00    0.00       1/1           free_fc [18]
------------------------------------------------
-              915.87    2.35  150000/150000      main [1]
-[2]     98.4  915.87    2.35  150000         conv_forward [2]
-                2.35    0.00  150000/150000      pad_input [5]
------------------------------------------------
-                7.90    0.00  150000/150000      main [1]
-[3]      0.8    7.90    0.00  150000         pool_forward [3]
------------------------------------------------
-                5.81    0.00  150000/150000      main [1]
-[4]      0.6    5.81    0.00  150000         relu_forward [4]
------------------------------------------------
-                2.35    0.00  150000/150000      conv_forward [2]
-[5]      0.3    2.35    0.00  150000         pad_input [5]
------------------------------------------------
-                0.94    0.00       1/1           main [1]
-[6]      0.1    0.94    0.00       1         load_data [6]
------------------------------------------------
-                0.59    0.00   50000/50000       main [1]
-[7]      0.1    0.59    0.00   50000         fc_forward [7]
------------------------------------------------
-                0.02    0.00   50000/50000       main [1]
-[8]      0.0    0.02    0.00   50000         softmax_forward [8]
------------------------------------------------
-                0.01    0.00       1/1           main [1]
-[9]      0.0    0.01    0.00       1         arr2txt_2 [9]
------------------------------------------------
-                0.00    0.00       3/3           main [1]
-[10]     0.0    0.00    0.00       3         free_conv [10]
------------------------------------------------
-                0.00    0.00       3/3           main [1]
-[11]     0.0    0.00    0.00       3         free_pool [11]
------------------------------------------------
-                0.00    0.00       3/3           main [1]
-[12]     0.0    0.00    0.00       3         free_relu [12]
------------------------------------------------
-                0.00    0.00       3/3           main [1]
-[13]     0.0    0.00    0.00       3         load_conv [13]
------------------------------------------------
-                0.00    0.00       3/3           main [1]
-[14]     0.0    0.00    0.00       3         make_conv_layer [14]
------------------------------------------------
-                0.00    0.00       3/3           main [1]
-[15]     0.0    0.00    0.00       3         make_pool_layer [15]
------------------------------------------------
-                0.00    0.00       3/3           main [1]
-[16]     0.0    0.00    0.00       3         make_relu_layer [16]
------------------------------------------------
-                0.00    0.00       2/2           main [1]
-[17]     0.0    0.00    0.00       2         malloc2D [17]
------------------------------------------------
-                0.00    0.00       1/1           main [1]
-[18]     0.0    0.00    0.00       1         free_fc [18]
------------------------------------------------
-                0.00    0.00       1/1           main [1]
-[19]     0.0    0.00    0.00       1         free_softmax [19]
------------------------------------------------
-                0.00    0.00       1/1           main [1]
-[20]     0.0    0.00    0.00       1         load_fc [20]
------------------------------------------------
-                0.00    0.00       1/1           main [1]
-[21]     0.0    0.00    0.00       1         make_fc_layer [21]
------------------------------------------------
-                0.00    0.00       1/1           main [1]
-[22]     0.0    0.00    0.00       1         make_softmax_layer [22]
------------------------------------------------
-
-
-Index by function name
-
-   [9] arr2txt_2              [13] load_conv              [22] make_softmax_layer
-   [2] conv_forward            [6] load_data              [17] malloc2D
-   [7] fc_forward             [20] load_fc                 [5] pad_input
-  [10] free_conv               [1] main                    [3] pool_forward
-  [18] free_fc                [14] make_conv_layer         [4] relu_forward
-  [11] free_pool              [21] make_fc_layer           [8] softmax_forward
-  [12] free_relu              [15] make_pool_layer
-  [19] free_softmax           [16] make_relu_layer
-  ```
----
----
-## Old data
 ### 1200
 ```
 e$ ./cnn-cifar10
@@ -538,6 +150,249 @@ Free memory time:0.044466 seconds
 Total time:1189.133804 seconds
 END!
 ```
+
+# 50.000 images
+```
+$ ./cnn-cifar10-serial-50000 
+Serial Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.994824 seconds
+Create Network time:0.000018 seconds
+Load Network Parameters time:0.008645 seconds
+Create Ouputs time:0.000443 seconds
+
+Net Forward total time:1575.735180 seconds
+    Time for conv1: 524.137613 seconds
+    Time for relu1: 4.386128 seconds
+    Time for pool1: 6.155470 seconds
+    Time for conv2: 802.578278 seconds
+    Time for relu2: 1.234625 seconds
+    Time for pool2: 1.845802 seconds
+    Time for conv3: 233.980326 seconds
+    Time for relu3: 0.325806 seconds
+    Time for pool3: 0.505723 seconds
+    Time for fc: 0.540173 seconds
+    Time for softmax: 0.022933 seconds
+
+  Conv: 1560.696218 seconds
+  ReLU: 5.946559 seconds
+  Pool: 8.506995 seconds
+  FC:   0.540173 seconds
+  Softmax: 0.022933 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.003480 seconds
+Free memory time:0.059575 seconds
+Total time:1576.802165 seconds
+END!
+```
+# Profiling
+
+```
+$ make profile 
+nvc -Minfo=all -c11 -Wall -Wextra -march=native -pg -c main_serial.c -o main_serial.o
+nvc -Minfo=all -c11 -Wall -Wextra -march=native -pg -c layers_serial.c -o layers_serial.o
+conv_forward:
+     62, FMA (fused multiply-add) instruction(s) generated
+fc_forward:
+    201, FMA (fused multiply-add) instruction(s) generated
+nvc -Minfo=all -c11 -Wall -Wextra -march=native -pg -c malloc2D.c -o malloc2D.o
+nvc -Minfo=all -c11 -Wall -Wextra -march=native -pg -c timer.c -o timer.o
+cpu_timer_stop:
+     11, FMA (fused multiply-add) instruction(s) generated
+nvc -Minfo=all -c11 -Wall -Wextra -march=native -pg -o cnn-cifar10-serial-profile main_serial.o layers_serial.o malloc2D.o timer.o
+
+$ ./cnn-cifar10-serial-profile 
+Serial Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.965365 seconds
+Create Network time:0.000011 seconds
+Load Network Parameters time:0.008384 seconds
+Create Ouputs time:0.000453 seconds
+
+Net Forward total time:1522.332360 seconds
+    Time for conv1: 491.547240 seconds
+    Time for relu1: 4.164806 seconds
+    Time for pool1: 6.003859 seconds
+    Time for conv2: 787.232773 seconds
+    Time for relu2: 1.190991 seconds
+    Time for pool2: 1.803548 seconds
+    Time for conv3: 228.990975 seconds
+    Time for relu3: 0.320252 seconds
+    Time for pool3: 0.492609 seconds
+    Time for fc: 0.528956 seconds
+    Time for softmax: 0.025174 seconds
+
+  Conv: 1507.770987 seconds
+  ReLU: 5.676048 seconds
+  Pool: 8.300016 seconds
+  FC:   0.528956 seconds
+  Softmax: 0.025174 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.011870 seconds
+Free memory time:0.062000 seconds
+Total time:1523.380443 seconds
+END!
+
+```
+
+## Gprof
+```
+$ gprof ./cnn-cifar10-serial-profile -b
+Flat profile:
+
+Each sample counts as 0.01 seconds.
+  %   cumulative   self              self     total           
+ time   seconds   seconds    calls  ms/call  ms/call  name    
+ 99.14   1510.08  1510.08   150000    10.07    10.07  conv_forward
+  0.52   1518.00     7.92   150000     0.05     0.05  pool_forward
+  0.37   1523.62     5.62   150000     0.04     0.04  relu_forward
+  0.06   1524.52     0.90        1   901.09   901.09  load_data
+  0.03   1524.94     0.42    50000     0.01     0.01  fc_forward
+  0.00   1524.96     0.02                             main
+  0.00   1524.97     0.01    50000     0.00     0.00  softmax_forward
+  0.00   1524.97     0.00   550007     0.00     0.00  cpu_timer_start
+  0.00   1524.97     0.00   550007     0.00     0.00  cpu_timer_stop
+  0.00   1524.97     0.00        3     0.00     0.00  free_conv
+  0.00   1524.97     0.00        3     0.00     0.00  free_pool
+  0.00   1524.97     0.00        3     0.00     0.00  free_relu
+  0.00   1524.97     0.00        3     0.00     0.00  load_conv
+  0.00   1524.97     0.00        3     0.00     0.00  make_conv_layer
+  0.00   1524.97     0.00        3     0.00     0.00  make_pool_layer
+  0.00   1524.97     0.00        3     0.00     0.00  make_relu_layer
+  0.00   1524.97     0.00        2     0.00     0.00  malloc2D
+  0.00   1524.97     0.00        1     0.00     0.00  arr2txt_2
+  0.00   1524.97     0.00        1     0.00     0.00  free_fc
+  0.00   1524.97     0.00        1     0.00     0.00  free_softmax
+  0.00   1524.97     0.00        1     0.00     0.00  load_fc
+  0.00   1524.97     0.00        1     0.00     0.00  make_fc_layer
+  0.00   1524.97     0.00        1     0.00     0.00  make_softmax_layer
+
+
+                        Call graph
+
+
+granularity: each sample hit covers 2 byte(s) for 0.00% of 1524.97 seconds
+
+index % time    self  children    called     name
+                                                 <spontaneous>
+[1]    100.0    0.02 1524.95                 main [1]
+             1510.08    0.00  150000/150000      conv_forward [2]
+                7.92    0.00  150000/150000      pool_forward [3]
+                5.62    0.00  150000/150000      relu_forward [4]
+                0.90    0.00       1/1           load_data [5]
+                0.42    0.00   50000/50000       fc_forward [6]
+                0.01    0.00   50000/50000       softmax_forward [7]
+                0.00    0.00  550007/550007      cpu_timer_start [8]
+                0.00    0.00  550007/550007      cpu_timer_stop [9]
+                0.00    0.00       3/3           make_conv_layer [14]
+                0.00    0.00       3/3           make_relu_layer [16]
+                0.00    0.00       3/3           make_pool_layer [15]
+                0.00    0.00       3/3           load_conv [13]
+                0.00    0.00       3/3           free_pool [11]
+                0.00    0.00       3/3           free_conv [10]
+                0.00    0.00       3/3           free_relu [12]
+                0.00    0.00       2/2           malloc2D [17]
+                0.00    0.00       1/1           make_fc_layer [22]
+                0.00    0.00       1/1           make_softmax_layer [23]
+                0.00    0.00       1/1           load_fc [21]
+                0.00    0.00       1/1           arr2txt_2 [18]
+                0.00    0.00       1/1           free_fc [19]
+                0.00    0.00       1/1           free_softmax [20]
+-----------------------------------------------
+             1510.08    0.00  150000/150000      main [1]
+[2]     99.0 1510.08    0.00  150000         conv_forward [2]
+-----------------------------------------------
+                7.92    0.00  150000/150000      main [1]
+[3]      0.5    7.92    0.00  150000         pool_forward [3]
+-----------------------------------------------
+                5.62    0.00  150000/150000      main [1]
+[4]      0.4    5.62    0.00  150000         relu_forward [4]
+-----------------------------------------------
+                0.90    0.00       1/1           main [1]
+[5]      0.1    0.90    0.00       1         load_data [5]
+-----------------------------------------------
+                0.42    0.00   50000/50000       main [1]
+[6]      0.0    0.42    0.00   50000         fc_forward [6]
+-----------------------------------------------
+                0.01    0.00   50000/50000       main [1]
+[7]      0.0    0.01    0.00   50000         softmax_forward [7]
+-----------------------------------------------
+                0.00    0.00  550007/550007      main [1]
+[8]      0.0    0.00    0.00  550007         cpu_timer_start [8]
+-----------------------------------------------
+                0.00    0.00  550007/550007      main [1]
+[9]      0.0    0.00    0.00  550007         cpu_timer_stop [9]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[10]     0.0    0.00    0.00       3         free_conv [10]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[11]     0.0    0.00    0.00       3         free_pool [11]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[12]     0.0    0.00    0.00       3         free_relu [12]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[13]     0.0    0.00    0.00       3         load_conv [13]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[14]     0.0    0.00    0.00       3         make_conv_layer [14]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[15]     0.0    0.00    0.00       3         make_pool_layer [15]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[16]     0.0    0.00    0.00       3         make_relu_layer [16]
+-----------------------------------------------
+                0.00    0.00       2/2           main [1]
+[17]     0.0    0.00    0.00       2         malloc2D [17]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[18]     0.0    0.00    0.00       1         arr2txt_2 [18]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[19]     0.0    0.00    0.00       1         free_fc [19]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[20]     0.0    0.00    0.00       1         free_softmax [20]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[21]     0.0    0.00    0.00       1         load_fc [21]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[22]     0.0    0.00    0.00       1         make_fc_layer [22]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[23]     0.0    0.00    0.00       1         make_softmax_layer [23]
+-----------------------------------------------
+
+
+Index by function name
+
+  [18] arr2txt_2              [12] free_relu              [15] make_pool_layer
+   [2] conv_forward           [20] free_softmax           [16] make_relu_layer
+   [8] cpu_timer_start        [13] load_conv              [23] make_softmax_layer
+   [9] cpu_timer_stop          [5] load_data              [17] malloc2D
+   [6] fc_forward             [21] load_fc                 [3] pool_forward
+  [10] free_conv               [1] main                    [4] relu_forward
+  [19] free_fc                [14] make_conv_layer         [7] softmax_forward
+  [11] free_pool              [22] make_fc_layer
+  ```
+---
+---
+## Old data
 
 ### 50000
 ```
